[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
itertools = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-serde = { version = "0.8", features = ["json"] }
crossbeam-channel = "0.5"
rand = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lean"
harness = false
