[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orderbook = { path = "../orderbook" }
easy-repl = "0.1.0"
anyhow = "1.0.58"
futures = "0.3"
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5.5"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-serde = { version = "0.8", features = ["json"] }
